Fix: menu title nowrap

--- a/source/css/layout/_partial/header.styl
+++ b/source/css/layout/_partial/header.styl
@@ -232,6 +232,10 @@ header
       &:hover
         background: var(--theme-color)
         color: var(--link-hover-font-color)
+      span
+        white-space: nowrap
+        overflow: hidden
+        text-overflow: ellipsis
 
 #menu-aside-info
   display: flex
